--- a/mobile.css
+++ b/mobile.css
@@ -112,6 +112,8 @@
         z-index: 2 !important;
         line-height: 1 !important;
         position: relative !important;
+        top: 50% !important;
+        transform: translateY(-50%) !important;
     }
     
     .theme-option:first-child {
