--- a/mobile.css
+++ b/mobile.css
@@ -111,18 +111,17 @@
         padding: 0 !important;
         z-index: 2 !important;
         line-height: 1 !important;
-        position: relative !important;
+        position: absolute !important;
         top: 50% !important;
         transform: translateY(-50%) !important;
     }
     
     .theme-option:first-child {
-        margin-left: 0.6rem !important;
+        left: 0.6rem !important;
     }
     
     .theme-option:last-child {
-        margin-left: auto !important;
-        margin-right: 0.6rem !important;
+        right: 0.6rem !important;
     }
     
     .theme-slider {
@@ -318,11 +317,11 @@
     }
     
     .theme-option:first-child {
-        margin-left: 0.55rem !important;
+        left: 0.55rem !important;
     }
     
     .theme-option:last-child {
-        margin-right: 0.55rem !important;
+        right: 0.55rem !important;
     }
     
     .theme-slider {
